force-app/main/default/objects/Opportunity_Snapshot__c/fields/Average_Commission__c.field-meta.xml
<CustomField>
    <fullName>Average_Commission__c</fullName>
    <label>Average Commission</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>