force-app/main/default/objects/Opportunity_Snapshot__c/fields/Total_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>Total_EBITDA__c</fullName>
    <label>Total EBITDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>